# Multi-Modal-RAG

./: .gitignore  README.md  langgraph.json  package.json  pyproject.toml
agent-chat-ui/: pnpm-lock.yaml
agent-chat-ui/apps/web/: .env.local.example  package.json
backend/core/: dependency.py
backend/langgraph/: __init__.py  graph.py  state.py  tools.py
backend/servies/: chat_service.py  file_service.py  types.py
backend/utils/: json_docstore.py
